# tacet

./: .gitignore  Cargo.toml  LICENSE  README.md  bundler.toml  deploy.ps1
docs/superpowers/plans/: 2026-07-01-tacet-empty-vst-synth.md
docs/superpowers/specs/: 2026-07-01-tacet-empty-vst-synth-design.md
src/: lib.rs
